replace_constructor Newtonsoft.Json.Converters.StringEnumConverter bool Newtonsoft.Json.Serialization.NamingStrategy,bool
rename method Newtonsoft.Json.JsonConvert SerializeObject Serialize