@@ -1,2 +1,4 @@
 replace_constructor Newtonsoft.Json.Converters.StringEnumConverter bool Newtonsoft.Json.Serialization.NamingStrategy,bool
 rename method Newtonsoft.Json.JsonConvert SerializeObject Serialize
+add_argument method:Newtonsoft.Json.JsonConvert.Serialize expression:'"xd"' 1,expression:'true' 3
+reorder_arguments method:Newtonsoft.Json.JsonConvert.Serialize 2,1,4,3
